fixed bleeding from education and workexperience pages on mobile

--- a/client/src/styles/mainLayout.css
+++ b/client/src/styles/mainLayout.css
@@ -26,7 +26,7 @@
 }
 
 .pageFullHeight {
-    height: 100vh;
+    height: 1000px;
 }
 
 .resumeBackgroundColor {
